--- a/WebCVCollector/Forms/MainWindow.xaml
+++ b/WebCVCollector/Forms/MainWindow.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="WebCVCollector.MainWindow"
+﻿<Window x:Class="WebCVCollector.Forms.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WebCVCollector"
+        xmlns:local="clr-namespace:WebCVCollector.Forms"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Button x:Name="CollectBtn" Content="Collect" HorizontalAlignment="Left" Height="55" Margin="93,52,0,0" VerticalAlignment="Top" Width="76" Click="CollectBtn_Click"/>
+        <Button x:Name="SearchBtn" Content="Search" HorizontalAlignment="Left" Margin="188,52,0,0" VerticalAlignment="Top" Width="76" Height="55" Click="SearchBtn_Click"/>
 
     </Grid>
 </Window>
